--- a/Template/public/index.html
+++ b/Template/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LocCar - Locadora de Automoveis</title>
+    <title>Template</title>
     <link rel="stylesheet" href="/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
     <link href="/css/font-awesome.css" rel="stylesheet">
@@ -28,42 +28,11 @@
 
     <script src="/js/app.js"></script>
     <script src="/js/controllers/header.js"></script>
-    <script src="/js/controllers/cidades.controller-form.js"></script>
-    <script src="/js/controllers/cidades.controller.js"></script>
-    <script src="/js/services/cidades.service.js"></script>
     <script src="/js/controllers/home.controller.js"></script>
-
-    <script src="/js/controllers/estados.controller-form.js"></script>
-    <script src="/js/controllers/estados.controller.js"></script>
-    <script src="/js/services/estados.service.js"></script>
 
     <script src="/js/controllers/paises.controller-form.js"></script>
     <script src="/js/controllers/paises.controller.js"></script>
     <script src="/js/services/paises.service.js"></script>
-
-    <script src="/js/controllers/marcas.controller-form.js"></script>
-    <script src="/js/controllers/marcas.controller.js"></script>
-    <script src="/js/services/marcas.service.js"></script>
-
-    <script src="/js/controllers/modelos.controller-form.js"></script>
-    <script src="/js/controllers/modelos.controller.js"></script>
-    <script src="/js/services/modelos.service.js"></script>
-
-    <script src="/js/controllers/opcionais.controller-form.js"></script>
-    <script src="/js/controllers/opcionais.controller.js"></script>
-    <script src="/js/services/opcionais.service.js"></script>
-
-    <script src="/js/controllers/clientes.controller-form.js"></script>
-    <script src="/js/controllers/clientes.controller.js"></script>
-    <script src="/js/services/clientes.service.js"></script>
-
-    <script src="/js/controllers/veiculos.controller-form.js"></script>
-    <script src="/js/controllers/veiculos.controller.js"></script>
-    <script src="/js/services/veiculos.service.js"></script>
-
-    <script src="/js/controllers/locacoes.controller-form.js"></script>
-    <script src="/js/controllers/locacoes.controller.js"></script>
-    <script src="/js/services/locacoes.service.js"></script>
 
     <script>
         $('#bsalert').on('close.bs.alert', toggleAlert)
