--- a/Template/public/partials/pais-form.html
+++ b/Template/public/partials/pais-form.html
@@ -1,5 +1,5 @@
 <div>
-    <div ng-controller="ModeloFormController as vm">
+    <div ng-controller="PaisFormController as vm">
         <div class="container">
             <div class="panel">
                 <div class="panel-body">
